--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,13 @@ jobs:
       - run: yarn run build
 
       - aws-s3/sync:
+          aws-access-key-id: PROD_AWS_ACCESS_KEY_ID
+          aws-secret-access-key: PROD_AWS_SECRET_ACCESS_KEY
           from: ~/repo/build/
           to: "s3://basic-ci.skunk.services"
           arguments: |
             --acl public-read \
-          
+
 
 workflows:
   version: 2.0
