final test of app builds with npm audit fix --force for good measure (even though its just ancient create-react-app vulns that would never see prod atm

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,8 +88,8 @@ jobs:
 
       - run:
           name: Install dependencies with NPM
-          command: cd ~/project/apps/<<parameters.app_name>> && yarn install # replace with `yarn install` if using yarn
-
+          command: cd ~/project/apps/<<parameters.app_name>> && yarn install && npm audit fix --force
+          # replace with `yarn install` if using yarn
       - save_cache:
           paths:
             - ~/project/apps/<<parameters.app_name>>/node_modules
