--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
 
       - run:
           name: Install dependencies with NPM
-          command: cd ~/project/apps/<<parameters.app_name>> && yarn install && npm audit fix --force
+          command: cd ~/project/apps/<<parameters.app_name>> && yarn install
           # replace with `yarn install` if using yarn
       - save_cache:
           paths:
